--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /storage/framework/sessions/*
 /storage/framework/views/*
 /storage/logs/
+/storage/api-docs/
 !/storage/framework/cache/.gitkeep
 !/storage/framework/sessions/.gitkeep
 !/storage/framework/views/.gitkeep
